litmus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: litmus
  labels:
    istio-injection: enabled
