litmus/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: chaos-gateway
  namespace: litmus
spec:
  selector:
    app: istio-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - chaos.local.io
