litmus/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: chaos-vs
  namespace: litmus
spec:
  hosts:
    - chaos.local.io
  gateways:
    - chaos-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: litmus-frontend-service.litmus.svc.cluster.local
            port:
              number: 9091
